Added form to register page

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,11 +8,11 @@
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
     <section>
-      <form action="/userData" method="POST">
+      <form action="/loginData" method="POST">
         <label for="userID">User:</label>
-        <input type="text" id="userID" name="user" value="<%= userData.user %>">
+        <input type="text" id="userID" name="user" value="<%= loginData.user %>">
         <label for="pw">Password:</label>
-        <input type="password" name="password" id="pw" value="<%= userData.password %>">
+        <input type="password" name="password" id="pw" value="<%= loginData.password %>">
         <button type="submit">Send</button>
       </form>
     </section>
